添加翻译按钮
输入框添加翻译按钮，当输入框内有文本内容inputTextPanelStateForChatPresentationInterfaceState函数内accessoryItems会为空数组，所以在accessoryItems为空数组时添加翻译按钮

--- a/Telegram/Telegram-iOS/en.lproj/Localizable.strings
+++ b/Telegram/Telegram-iOS/en.lproj/Localizable.strings
@@ -4733,6 +4733,7 @@ Sorry for the inconvenience.";
 
 "VoiceOver.Keyboard" = "Keyboard";
 "VoiceOver.Stickers" = "Stickers";
+"VoiceOver.Translate" = "Translate";
 "VoiceOver.ScheduledMessages" = "Scheduled Messages";
 "VoiceOver.BotCommands" = "Bot Commands";
 "VoiceOver.BotKeyboard" = "Bot Keyboard";
