版本一优化
发送文本翻译弹框增加遮罩。
中文语言包，部分不显示问题处理。
翻译开关首次登陆默认关闭。
翻译语言包列表，选中项不可点击处理，选中后文本不能自动换行处理。

--- a/Telegram/Telegram-iOS/ar.lproj/WellLocalizable.strings
+++ b/Telegram/Telegram-iOS/ar.lproj/WellLocalizable.strings
@@ -1,4 +1,4 @@
-"AppName" = "Nicegram";
+"AppName" = "Wellgram";
 
 /*ChatFilter*/
 "ChatFilter.Bots" = "بوتات";
@@ -102,6 +102,7 @@
 "ManageFilters.Header" = "ضبط الفلاتر المتاحة";
 
 "Messages.Translate" = "ترجمة";
+"Messages.SendTranslate" = "Send";
 "Messages.UndoTranslate" = "التراجع عن الترجمة";
 "Messages.TranslateError" = "عفوًا، الترجمة غير متوفرة.";
 
