--- a/Telegram/Telegram-iOS/ru.lproj/WellLocalizable.strings
+++ b/Telegram/Telegram-iOS/ru.lproj/WellLocalizable.strings
@@ -103,6 +103,7 @@
 "ManageFilters.Header" = "РЕДАКТИРОВАНИЕ ДОСТУПНЫХ ФИЛЬТРОВ";
 
 "Messages.Translate" = "Перевод";
+"Messages.SendTranslate" = "Send";
 "Messages.UndoTranslate" = "Отменить Перевод";
 "Messages.TranslateError" = "К сожалению, перевод недоступен.";
 
