--- a/Telegram/Telegram-iOS/zh-hant.lproj/WellLocalizable.strings
+++ b/Telegram/Telegram-iOS/zh-hant.lproj/WellLocalizable.strings
@@ -1,4 +1,4 @@
-"AppName" = "Nicegram";
+"AppName" = "Wellgram";
 
 /*ChatFilter*/
 "ChatFilter.Bots" = "機器人";
@@ -103,6 +103,7 @@
 "ManageFilters.Header" = "設定過濾器";
 
 "Messages.Translate" = "翻譯";
+"Messages.SendTranslate" = "Send";
 "Messages.UndoTranslate" = "取消翻譯";
 "Messages.TranslateError" = "抱歉，無法翻譯。";
 
