--- a/Telegram/Telegram-iOS/pl.lproj/WellLocalizable.strings
+++ b/Telegram/Telegram-iOS/pl.lproj/WellLocalizable.strings
@@ -61,6 +61,13 @@
 /*NGWeb*/
 "NGWeb.Blocked" = "Niedostępne w Nicegram ze względu na wytyczne AppStore";
 
+//定制-语言本地化
+"WGStrings.AutoTranslate" = "单聊开启自动翻译";
+"WGStrings.HandTranslate" = "单聊、群聊开启翻译";
+"WGStrings.SendTranslate" = "消息发送开启翻译";
+"WGStrings.CloseSingleAutoTranslate" = "关闭自动翻译";
+"WGStrings.OpenSingleAutoTranslate" = "开启自动翻译";
+
 /*Browser*/
 /*Please, Go to «Data & Storage» to configure default browser*/
 "NiceFeatures.Use.DataStorage" = "Użyj «%1», aby skonfigurować domyślną przeglądarkę";
@@ -103,17 +110,9 @@
 "ManageFilters.Header" = "SKONFIGURUJ DOSTĘPNE FILTRY";
 
 "Messages.Translate" = "Tłumacz";
-"Messages.SendTranslate" = "Send";
+"Messages.SendTranslate" = "wysłać";
 "Messages.UndoTranslate" = "Cofnij tłumaczenie";
 "Messages.TranslateError" = "Tłumaczenie niedostępne.";
-
-/*NG Lab Registration Date*/
-"NGLab.RegDate.Btn" = "Uzyskaj datę rejestracji";
-"NGLab.RegDate.Title" = "Data rejestracji";
-"NGLab.RegDate.Notice" = "To jest przybliżona data";
-"NGLab.RegDate.MenuItem" = "zarejestrowano";
-"NGLab.RegDate.FetchError" = "Nie można uzyskać daty rejestracji.";
-"NGLab.BadDeviceToken" = "[iOS 11+] Nie można zweryfikować urządzenia.";
 
 /*Backup Settings*/
 "NiceFeatures.BackupIcloud" = "Synchronizuj ustawienia i foldery z iCloud";
